--- a/index.html
+++ b/index.html
@@ -173,90 +173,89 @@
     <audio data-key="74" src="SCP_-_Victory_Theme_2_-.mp3"></audio>
 
     <div class="keys4">
-        <div data-key="90" class="key">
-            <kbd>Z</kbd>
+        <div data-key="75" class="key">
+            <kbd>L</kbd>
             <span class="sound">SCP-012 Lullaby</span>
         </div>
-        <div data-key="88" class="key">
-            <kbd>X</kbd>
+        <div data-key="76" class="key">
+            <kbd>;</kbd>
             <span class="sound">SCP-012 Distant Lullaby</span>
         </div>
-        <div data-key="67" class="key">
-            <kbd>C</kbd>
+        <div data-key="186" class="key">
+            <kbd>'</kbd>
             <span class="sound">SCP-012 YOU MUST FINISH IT</span>
         </div>
-        <div data-key="86" class="key">
-            <kbd>V</kbd>
+        <div data-key="222" class="key">
+            <kbd>Z</kbd>
             <span class="sound">SCP Wandering Ambience</span>
         </div>
-        <div data-key="66" class="key">
-            <kbd>B</kbd>
+        <div data-key="90" class="key">
+            <kbd>X</kbd>
             <span class="sound">SCP Defeat 1 (Unused)</span>
         </div>
-        <div data-key="78" class="key">
-            <kbd>N</kbd>
+        <div data-key="88" class="key">
+            <kbd>C</kbd>
             <span class="sound">SCP Defeat 2 (Unused)</span>
         </div>
-        <div data-key="77" class="key">
-            <kbd>M</kbd>
+        <div data-key="67" class="key">
+            <kbd>V</kbd>
             <span class="sound">CI & CD Victory</span>
         </div>
-        <div data-key="188" class="key">
-            <kbd>,</kbd>
+        <div data-key="87" class="key">
+            <kbd>B</kbd>
             <span class="sound">SH Assault 1</span>
         </div>
-        <div data-key="190" class="key">
-            <kbd>.</kbd>
+        <div data-key="66" class="key">
+            <kbd>N</kbd>
             <span class="sound">(Unavailable)</span>
         </div>
-        <div data-key="191" class="key">
-            <kbd>/</kbd>
+        <div data-key="78" class="key">
+            <kbd>M</kbd>
             <span class="sound">SH Assault 3</span>
         </div>
     </div>
 
-    <audio data-key="90" src="SCP-012_-_Lullaby_-.mp3"></audio>
-    <audio data-key="88" src="SCP-012_-_Distant_Lullaby_-.mp3"></audio>
-    <audio data-key="67" src="SCP-012_-_YOU_MUST_FINISH_IT_-.mp3"></audio>
-    <audio data-key="86" src="SCP_-_Wandering_Ambience.mp3"></audio>
-    <audio data-key="66" src="SCP_Anomalies_-_Defeat_Theme.mp3"></audio>
-    <audio data-key="78" src="SCP_Anomalies_-_Defeat_Theme_2.mp3"></audio>
-    <audio data-key="77" src="C.I_and_Class_D_-_Victory_Theme.mp3"></audio>
-    <audio data-key="188" src="Serpents_Hand_-_Assault_1.mp3"></audio>
-    <audio data-key="190" src=""></audio>
-    <audio data-key="191" src="Serpents_Hand_Assault_3.mp3"></audio>
+    <audio data-key="75" src="SCP-012_-_Lullaby_-.mp3"></audio>
+    <audio data-key="76" src="SCP-012_-_Distant_Lullaby_-.mp3"></audio>
+    <audio data-key="186" src="SCP-012_-_YOU_MUST_FINISH_IT_-.mp3"></audio>
+    <audio data-key="222" src="SCP_-_Wandering_Ambience.mp3"></audio>
+    <audio data-key="90" src="SCP_Anomalies_-_Defeat_Theme.mp3"></audio>
+    <audio data-key="88" src="SCP_Anomalies_-_Defeat_Theme_2.mp3"></audio>
+    <audio data-key="67" src="C.I_and_Class_D_-_Victory_Theme.mp3"></audio>
+    <audio data-key="87" src="Serpents_Hand_-_Assault_1.mp3"></audio>
+    <audio data-key="66" src=""></audio>
+    <audio data-key="78" src="Serpents_Hand_Assault_3.mp3"></audio>
 
     <div class="keys5">
-        <div data-key="192" class="key">
-            <kbd>`</kbd>
+        <div data-key="77" class="key">
+            <kbd>,</kbd>
             <span class="sound">SH Insertion 1</span>
         </div>
-        <div data-key="9" class="key">
-            <kbd>TAB</kbd>
+        <div data-key="188" class="key">
+            <kbd>.</kbd>
             <span class="sound">(Unavailable)</span>
         </div>
-        <div data-key="20" class="key">
-            <kbd>CAPS</kbd>
+        <div data-key="190" class="key">
+            <kbd>/</kbd>
             <span class="sound">CI Assault 1</span>
         </div>
-        <div data-key="16" class="key">
-            <kbd>SHIFT</kbd>
+        <div data-key="191" class="key">
+            <kbd>`</kbd>
             <span class="sound">CI Assault 2</span>
         </div>
-        <div data-key="17" class="key">
+        <div data-key="192" class="key">
             <kbd>CTRL</kbd>
             <span class="sound">CI Assault 3</span>
         </div>
     </div>
 
-    <audio data-key="192" src="Serpents_Hand_Insertion_-_1.mp3"></audio>
-    <audio data-key="9" src=""></audio>
-    <audio data-key="20" src="CI_-_Assault_1.mp3"></audio>
-    <audio data-key="16" src="CI_-_Assault_2.mp3"></audio>
-    <audio data-key="17" src="CI_-_Assault_3.mp3"></audio>
+    <audio data-key="77" src="Serpents_Hand_Insertion_-_1.mp3"></audio>
+    <audio data-key="188" src=""></audio>
+    <audio data-key="190" src="CI_-_Assault_1.mp3"></audio>
+    <audio data-key="191" src="CI_-_Assault_2.mp3"></audio>
+    <audio data-key="192" src="CI_-_Assault_3.mp3"></audio>
 
     <script>
-        console.log('A List of all rBreach Reval Songs. They all belong to the person who made it, Axel Nosferatu.')
         var running = 0;
 
         function playSound(e) {
@@ -264,12 +263,12 @@
             const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
             if (!audio) return; //stop the function
             if (running == 0) {
-                console.log(running, 'Not Running (0)')
+                console.log(running, '0')
                 audio.play();
                 running = 1
                 key.classList.add('playing');
             } else if (running == 1) {
-                console.log(running, 'Running (1)')
+                console.log(running, '1')
                 audio.currentTime = 0; //restart
                 audio.pause();
                 running = 0
@@ -279,8 +278,8 @@
             if (e.propertyName !== 'transform') return; //skip if not this one
             this.classList.remove('playing')
         }
-        const keys1 = document.querySelectorAll('.key');
-        keys1.forEach(key1 => key1.addEventListener('transitionend', removeTransition));
+        const keys = document.querySelectorAll('.key');
+        keys.forEach(key => key.addEventListener('transitionend', removeTransition));
         window.addEventListener('keydown', playSound)
     </script>
 
