--- a/index.html
+++ b/index.html
@@ -174,43 +174,43 @@
 
     <div class="keys4">
         <div data-key="75" class="key">
-            <kbd>L</kbd>
+            <kbd>K</kbd>
             <span class="sound">SCP-012 Lullaby</span>
         </div>
         <div data-key="76" class="key">
-            <kbd>;</kbd>
+            <kbd>L</kbd>
             <span class="sound">SCP-012 Distant Lullaby</span>
         </div>
         <div data-key="186" class="key">
-            <kbd>'</kbd>
+            <kbd>;</kbd>
             <span class="sound">SCP-012 YOU MUST FINISH IT</span>
         </div>
         <div data-key="222" class="key">
-            <kbd>Z</kbd>
+            <kbd>'</kbd>
             <span class="sound">SCP Wandering Ambience</span>
         </div>
         <div data-key="90" class="key">
-            <kbd>X</kbd>
+            <kbd>Z</kbd>
             <span class="sound">SCP Defeat 1 (Unused)</span>
         </div>
         <div data-key="88" class="key">
-            <kbd>C</kbd>
+            <kbd>X</kbd>
             <span class="sound">SCP Defeat 2 (Unused)</span>
         </div>
         <div data-key="67" class="key">
-            <kbd>V</kbd>
+            <kbd>C</kbd>
             <span class="sound">CI & CD Victory</span>
         </div>
         <div data-key="87" class="key">
-            <kbd>B</kbd>
+            <kbd>V</kbd>
             <span class="sound">SH Assault 1</span>
         </div>
         <div data-key="66" class="key">
-            <kbd>N</kbd>
+            <kbd>B</kbd>
             <span class="sound">(Unavailable)</span>
         </div>
         <div data-key="78" class="key">
-            <kbd>M</kbd>
+            <kbd>N</kbd>
             <span class="sound">SH Assault 3</span>
         </div>
     </div>
@@ -228,23 +228,23 @@
 
     <div class="keys5">
         <div data-key="77" class="key">
-            <kbd>,</kbd>
+            <kbd>M</kbd>
             <span class="sound">SH Insertion 1</span>
         </div>
         <div data-key="188" class="key">
-            <kbd>.</kbd>
+            <kbd>,</kbd>
             <span class="sound">(Unavailable)</span>
         </div>
         <div data-key="190" class="key">
-            <kbd>/</kbd>
+            <kbd>.</kbd>
             <span class="sound">CI Assault 1</span>
         </div>
         <div data-key="191" class="key">
-            <kbd>`</kbd>
+            <kbd>/</kbd>
             <span class="sound">CI Assault 2</span>
         </div>
         <div data-key="192" class="key">
-            <kbd>CTRL</kbd>
+            <kbd>`</kbd>
             <span class="sound">CI Assault 3</span>
         </div>
     </div>
