--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
     <audio data-key="66" src=""></audio>
     <audio data-key="78" src="Serpents_Hand_Assault_3.mp3"></audio>
 
-    <div class="keys5">
+   <div class="keys5">
         <div data-key="77" class="key">
             <kbd>M</kbd>
             <span class="sound">SH Insertion 1</span>
@@ -243,9 +243,13 @@
             <kbd>/</kbd>
             <span class="sound">CI Assault 2</span>
         </div>
+        <div data-key="16" class="key">
+            <kbd>SHIFT</kbd>
+            <span class="sound">CI Assault 3</span>
+        </div>
         <div data-key="192" class="key">
             <kbd>`</kbd>
-            <span class="sound">CI Assault 3</span>
+            <span class="sound">CI vs MTF</span>
         </div>
     </div>
 
@@ -253,7 +257,8 @@
     <audio data-key="188" src=""></audio>
     <audio data-key="190" src="CI_-_Assault_1.mp3"></audio>
     <audio data-key="191" src="CI_-_Assault_2.mp3"></audio>
-    <audio data-key="192" src="CI_-_Assault_3.mp3"></audio>
+    <audio data-key="16" src="CI_-_Assault_3.mp3"></audio>
+    <audio data-key="192" src="Ci vs MTF.mp3"></audio>
 
     <script>
         var running = 0;
